# omarchy-nightlight_tui

./: README.md  install.sh  pyproject.toml
nightlight_tui/: __init__.py  __main__.py  app.py  config.py  install_cmd.py  storage.py  styles.tcss
nightlight_tui/assets/: nightlight-schedule.service  nightlight-schedule.timer  nightlight.sh
scripts/: nightlight.sh
